# fermi-infer

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  fermi.toml.example
crates/fermi-cli/: Cargo.toml
crates/fermi-cli/src/: main.rs
crates/fermi-core/: Cargo.toml
crates/fermi-core/src/: lib.rs
crates/fermi-grpc/: Cargo.toml  build.rs
crates/fermi-grpc/proto/: fermi.proto
crates/fermi-grpc/src/: lib.rs  main.rs
crates/fermi-io/: Cargo.toml
crates/fermi-io/src/: lib.rs
crates/fermi-metrics/: Cargo.toml
crates/fermi-models/: Cargo.toml
crates/fermi-models/src/: lib.rs  phi3.rs  qwen3.rs
crates/fermi-openai/: Cargo.toml
crates/fermi-openai/src/: main.rs
crates/fermi-runtime/: Cargo.toml
crates/fermi-runtime/src/: config.rs  engine.rs  lib.rs  loader.rs  sampling.rs  session.rs
demo/: fermi_pb2.py  fermi_pb2_grpc.py  gradio_app.py  requirements.txt
fermi-infer/: .gitignore  Cargo.toml
fermi-infer/src/: main.rs  model_qwen3.rs
prompts/: system.txt
