[package]
name = "fermi-infer"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"

anyhow = "1.0"
tokenizers = "0.21" 
hf-hub = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.8.5"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-core/accelerate"]
