[package]
name = "fermi-infer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
candle-core = "0.8.2"
candle-nn = "0.8.2"
fermi-io = { path = "../fermi-io" }
fermi-runtime = { path = "../fermi-runtime" }
tokenizers = "0.21"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "fermi-runtime/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-core/accelerate", "fermi-runtime/metal"]
