[package]
name = "fermi-models"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
candle-core = "0.8.2"
candle-nn = "0.8.2"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-core/accelerate"]
