[package]
name = "fermi-openai"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fermi-openai"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tokenizers = "0.21"

candle-core = "0.8.2"
candle-nn = "0.8.2"
fermi-io = { path = "../fermi-io" }
fermi-runtime = { path = "../fermi-runtime" }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "fermi-runtime/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-core/accelerate", "fermi-runtime/metal"]
