[package]
name = "fermi-runtime"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
candle-core = "0.8.2"
candle-nn = "0.8.2"
fermi-models = { path = "../fermi-models" }
rand = "0.8"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "fermi-models/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-core/accelerate", "fermi-models/metal"]
